<resources>
    <string name="app_name">Distribroot</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>

    //FirebaseAuthUI sign in
    <string name="login_quick_connect_label">quickly connect with</string>
    <string name="login_create_account_label">or login with your email</string>
    <string name="login_google_btn_text">Continue with Google</string>
    <string name="login_email_btn_text">Continue with e-mail</string>
    <string name="login_phone_btn_text">Continue with phone</string>
    <string name="login_backsplash_content_description">login backsplash</string>
    <string name="login_logo_content_description">app logo</string>



    //User info form
    <string name="user_form_btn_submit">Submit</string>
    <string name="user_form_first_name_hint">First Name</string>
    <string name="user_form_last_name_hint">Last Name</string>
    <string name="user_form_email_hint">E-mail</string>
    <string name="user_form_phone_hint">Phone Number</string>
    <string name="user_form_address_hint">Address</string>
    <string name="user_form_num_children_hint">Number of children</string>

    //distributor info form
    <string name="distributor_form_btn_sign_out">Sign out</string>
    <string name="distributor_form_btn_submit">Submit</string>
    <string name="distributor_form_name_hint">Distributor Name</string>
    <string name="distributor_form_email_hint">E-mail</string>
    <string name="distributor_form_phone_hint">Phone Number</string>
    <string name="distributor_form_address_hint">Street Address</string>
    <string name="distributor_form_city_hint">City</string>
    <string name="distributor_form_state_hint">State</string>
    <string name="distributor_form_zip_hint">Zip</string>

    //Welcome screen
    <string name="welcome_tv">Welcome to Distribroot</string>
    <string name="welcome_description_locate_tv">Locate distributors near you</string>
    <string name="welcome_description_cont_tv">Subscribe to real time updates</string>
    <string name="welcome_description_start_tv">Start a new distribution center</string>

    <string name="welcome_user_btn_txt">Find Local Distribution</string>
    <string name="welcome_distributor_btn_txt">Create New Distribution</string>
    <string name="main_google_play_not_enabled_error_toast">Unable to locate distribution. Please update Google Play Services to continue</string>
    <string name="main_location_request_dialog_msg">\"This application requires your location in order to work properly, do you want to enable location permissions? \"</string>
    <string name="main_location_request_disabled_toast_msg">Permission request has been disabled. Enable location permission in app settings to continue.</string>
    <string name="main_location_request_dialog_yes_btn_txt">Yes</string>
    <string name="main_location_request_dialog_cancel_btn_txt">Cancel</string>
    <string name="main_gps_request_dialog_msg">\"This application requires GPS in order to work properly, do you want to enable it? \"</string>

    //Find distribution screen
    <string name="distribution_map_marker_text">Your Location</string>
    <string name="find_map_content_description">Map with local distributions</string>

    //BottomSheet
    <string name="bottom_sheet_subscribe_label">Subscribe for updates</string>
    <string name="bottom_sheet_subscribed_toast_text">Subscribed to </string>
    <string name="bottom_sheet_unsubscribed_toast_text">Unsubscribed from </string>
    <string name="bottom_sheet_marker_icon_content_description">marker icon</string>


    //PreferenceScreen
    <string name="preferences_category_subscribed_title_text">Subscribed Distributions</string>
    <string name="preferences_category_subscribed_key">distributor_categories</string>


    //DataBindingAdapter
    <string name="validation_error_empty">Field cannot be empty</string>
    <string name="appwidget_no_text">Subscribe in app to view distributions</string>
    <string name="add_widget">Add widget</string>

</resources>
